comment unnecessary lines in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@
   }
 }
 
-@layer utilities {
+/* @layer utilities {
   .no-scrollbar {
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -75,4 +75,4 @@
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
-}
+} */
