update page.tsx to use no-scrollbar from globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,12 +67,12 @@
   }
 }
 
-/* @layer utilities {
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
   .no-scrollbar {
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-} */
+}
